
- added ewl_widget_get_full_padding(), and changed ewl_widget_get_padding()
to just return it's own padding again. 
- changed EwlContainer resize callbacks to use full_padding() func. 
- button should render correctly now -- the code is a bit messy still,
but it appears to work as advertised now. :)


-----
20000911-1755-PDT, pabs



-----
20000911-1843-PDT, pabs

- added some new images for ewlbuttons -- you'll have to run the update
script in order to see them.
- updated the bg to so you can see the transparency.
- just for fun, i made it so mouse clicking hilites the button.

-----
20000912-0048-PDT, pabs

- added font path support.  syntax and behavoir mimicks the theme path
stuff (which means you can override fonts on a personal or application-
wide basis -- hooray!).  the key is "font_path", and the
create_user_preferences.sh script has been updated to reflect this.
- added font and image cache support -- the keys are
"render/image_cache" and "render/font_cache".  ewl will fall back to
sane values if these aren't set (ala the render/method key), but it
will bitch. :)
- added a default font from my font stockpile. :)
- added font api stuff -- widgets wanting to use text can define
their own font keys (eg EwlButton/default_font or whatever), but
they if they're not defined widgets should fall back on the 
char *ewl_get_default_font() value.

-----
20000912-1656-PDT, pabs

- completely rewrote EwlLabel with evas and the ewl font system support
it doesnt' display yet, but i think that might just be a screwup in the
font path stuff.. dunno fo rsure.
- got label to display, but it's not alighning correctly.. where are
the evas calls for this stuff?
- okay now it aligns correctly, but it's producing a mirror copy of
itself up top.. screw this, i'm goign home. :)

-----
20000912-1739-PDT, pabs

- added the button back into the ewltest app so you can see the three
together (well, four actually, but you can't see the box doing it's
thang, so it doesn't count).
